--- a/source/0.4f/src/main/webapp/index.xhtml
+++ b/source/0.4f/src/main/webapp/index.xhtml
@@ -40,6 +40,9 @@
     <p>
       myRx provides you with a secure and easy to access way to view your medications when you need to.
     </p>
+    <div>
+      <a href="test.xhtml">TEST</a>
+    </div>
   </div>
 </div>
 
