--- a/source/0.4f/src/main/webapp/main.xhtml
+++ b/source/0.4f/src/main/webapp/main.xhtml
@@ -73,7 +73,7 @@
                 <h:inputText value="#{beanDButil.phone}" required="false" class="w3-input w3-border" />
               </h:column>
               <h:column><f:facet name="header" class="w3-teal"><label>Address</label></f:facet>
-                <h:inputText value="#{beanDButil.address}" required="false" class="w3-input w3-border" />
+                <h:inputTextarea value="#{beanDButil.address}" required="false" class="w3-input w3-border" />
               </h:column>
               <h:column><f:facet name="header" class="w3-teal"><label>Username</label></f:facet>
                 <h:inputText value="#{beanDButil.username}" required="true" class="w3-input w3-border" />
